# SSH-Tunnel-Manager

./: .gitignore  Cargo.toml  README.md
.github/: release.yml
.github/workflows/: ci.yml  release.yml
examples/: connections.example.toml
locales/: en.yml  zh-CN.yml
scripts/: package-macos.sh
src/: lib.rs  main.rs
src/cli/: commands.rs  interactive.rs  mod.rs
src/models/: auth.rs  connection.rs  forwarding.rs  log.rs  mod.rs  session.rs  template.rs
src/services/: config_service.rs  key_service.rs  log_service.rs  mod.rs  port_validator.rs  session_manager.rs  ssh_service.rs  tunnel_service.rs  validation_service.rs
src/state/: app_state.rs  mod.rs
src/ui/: app.rs  mod.rs
src/ui/components/: connection_card.rs  mod.rs  session_card.rs
src/ui/views/: connection_form.rs  connection_list.rs  mod.rs  session_view.rs
src/utils/: error.rs  i18n.rs  logger.rs  mod.rs  ssh_command_parser.rs
tests/: config_integration_test.rs  log_integration_test.rs  session_manager_integration_test.rs  ssh_command_parser_integration_test.rs  validation_integration_test.rs
