[package]
name = "ssh-tunnel-manager"
version = "1.0.0"
edition = "2024"
authors = ["Cooper"]
description = "A modern SSH tunnel and port forwarding manager with GUI"
license = "MIT"

[features]
default = []
gui = ["dep:gpui", "dep:gpui-component"]

[dependencies]
# GPUI framework (requires Rust 1.87+ and full Xcode for Metal backend)
# Native Metal backend provides better multi-monitor stability
gpui = { version = "0.2.2", optional = true }
gpui-component = { version = "0.5.0", optional = true }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }
dialoguer = "0.12"
console = "0.16"
indicatif = "0.17"

# SSH (Pure Rust) - Upgraded for forward-tcpip support
russh = "0.56"

# Async runtime
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "sync", "time", "net", "fs"] }
futures = "0.3"
async-trait = "0.1"

# Serialization & config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Internationalization (i18n)
rust-i18n = "3"

# Utilities
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
dirs = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.11"
once_cell = "1.20"

# Cryptography
sha2 = "0.10"
base64 = "0.22"
russh-keys = "0.49"
ssh-key = { version = "0.6", features = ["std"] }

[dev-dependencies]
tempfile = "3.24"
tokio-test = "0.4"
